fix select dropdown panel going outside the screen or getting too narrow + add config options

--- a/projects/playground/src/app/pages/select/select.page.scss
+++ b/projects/playground/src/app/pages/select/select.page.scss
@@ -28,3 +28,6 @@
 .wide-select {
   width: 80vw;
 }
+.align-right {
+  margin-left: auto;
+}
